updated the order details card in customer and provider